# micro-middleware

./: CMakeLists.txt  LICENSE.md  README.md  micro_middleware.hpp  transport_api.hpp
examples/: basic_service.cpp  basic_subscription.cpp  class_service.cpp  class_subscription.cpp  transport.cpp
examples/transport_udp/: main.cpp  simple_topic_transport.hpp  topics.hpp  transport_api.hpp  transport_udp.hpp  udp_sendreceive.hpp
